--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ bld/
 # Virtual Environment
 venv/
 
+# Python interpreter cache
+__pycache__/
+
 # Visual Studio 2015 cache/options directory
 .vs/
 
